--- a/README
+++ b/README
@@ -11,15 +11,14 @@ This library has been packaged with rebar.
 So you can use randomstring from any instance of the Erlang console by installing in the erlang library directory.
 
 This is usually found in :
-/usr/local/lib/erlang/lib
+/usr/local/lib/erlang/li
 
-Once you have moved the randomstring directory into the Erlang library folder, compile it with rebar:
+Once in the folder, install randomstring via git
 
-$ ./rebar compile
+> sudo git clone git@github.com:benahlan/randomstring.git
 
 And voila!  You can use randomstring from Erlang console in the following way:
 
 >  randomstring:get(5, "1234567890qwertyuiop").
 >  8j5dp
-
 
